<resources>
    <string name="app_name">Exercise</string>
    <string name="email">email</string>
    <string name="login">SIGN-IN</string>
    <string name="password">password</string>
    <string name="search">search staff</string>
    <string name="deptA">IT</string>
    <string name="department">Department</string>
    <string name="deptB">KT</string>
    <string name="create">CREATE NEW STAFF</string>
    <string name="view_all">VIEW ALL ROLE</string>
    <string name="change_profile">CHANGE PROFILE</string>
    <string name="sign_off">SIGN OFF</string>
    <string name="address">address</string>
    <string name="add">Add</string>
    <string name="name">name</string>
    <string name="role">ROLES</string>
    <string name="create_staff">Create new staff</string>
    <string name="edit_staff">Edit staff</string>
    <string name="delete_staff">Delete staff</string>
    <string name="create_new_role">Create new role</string>
    <string name="edit_role">Edit role</string>
    <string name="delete_role">Delete role</string>
</resources>